miniextendr-macros/tests/ui/derive_dataframe_generic.stderr
error: DataFrameRow does not support generic types
 --> tests/ui/derive_dataframe_generic.rs:6:11
  |
6 | struct Row<T> {
  |           ^^^
